# cpprl

./: .gitignore  CMakeLists.txt  README.md  ppo_atari.cpp
env/: env.h  env_ale.h  vec_env.h
include/model/: cnn.h
tests/: test.cpp  test2.cpp  test_ale.cpp  test_ale_vec_env.cpp  test_fmt.cpp
